--- a/ScientificCalculator/pom.xml
+++ b/ScientificCalculator/pom.xml
@@ -34,11 +34,23 @@
 
   <build>
       <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>3.0.0-M7</version>
-          </plugin>
+       <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.calculator.Calculator</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+      </plugin>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M7</version>
+       </plugin>
       </plugins>
   </build>
 
